Bug 414960 - "Horizontal scroll is backwards" [p=ventnor.bugzilla@yahoo.com.au (Michael Ventnor) r+sr=roc a1.9=damons]